# MartApi-Microservices

./: README.md  compose.yml
InventoryService/: Dockerfile  pyproject.toml
orderService/: Dockerfile  pyproject.toml
productService/: .env  Dockerfile  pyproject.toml
productService/productservice/: db.py  deleteproducts.py  getproducts.py  main.py  models.py  setting.py
userService/: .env  Dockerfile  pyproject.toml
userService/userservice/: db.py  main.py  models.py  setting.py
userService/userservice/routers/: auth.py  managePassword.py  manageUser.py
