[tool.poetry]
name = "inventoryservice"
version = "0.1.0"
description = ""
authors = ["Saim khalid <saimkhalid6220@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
